Add: Subtítulos opcionales en el home

--- a/src/translations/en/profile.json
+++ b/src/translations/en/profile.json
@@ -3,6 +3,7 @@
   "descript": "",
   "hobbies": "",
   "dev": "Front-end Developer",
+  "titles": [],
   "years": "23 years",
   "nationality": "Argentina",
   "linksSocialNetworks": {
