--- a/src/translations/pt/profile.json
+++ b/src/translations/pt/profile.json
@@ -3,6 +3,7 @@
   "descript": "",
   "hobbies": "",
   "dev": "Desenvolvedor Front-end",
+  "titles": [],
   "years": "23 anos",
   "nationality": "Argentina",
   "linksSocialNetworks": {
