agregar iconos e info de perfil

--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -12,10 +12,12 @@
     "section": "Presentación",
     "skills": {
       "title": "Habilidades",
-      "frontEnd": "Desarrollo Front-End",
-      "dataBase": "Base de datos",
-      "versionControl": "Control de verisones",
-      "backEnd": "Desarrollo Back-End"
+      "lenguajes": "Lenguajes",
+      "herramientas": "Herramientas",
+      "database": "Bases de Datos",
+      "ides": "IDEs",
+      "versionControl": "Control de versiones",
+      "3dDesign":"Diseño e Impresión 3D"
     },
     "hobbies": "Pasatiempos"
   },
