--- a/src/translations/es/profile.json
+++ b/src/translations/es/profile.json
@@ -2,7 +2,10 @@
   "fullname": "Nicolas Boattini",
   "descript": "",
   "hobbies": "",
-  "dev": "Ingeniero en Sistemas de Información - Game Developer",
+  "dev": "Ingeniero en Sistemas de Información",
+  "titles": [
+    "Game Developer"
+  ],
   "years": "23 años",
   "nationality": "Argentina",
   "linksSocialNetworks": {
@@ -10,7 +13,7 @@
     "Linkedin": "https://www.linkedin.com/in/nicoboattini/",
     "Instagram": "https://www.instagram.com/nicolasboattini/",
     "Email": "mailto:nicoboattini@gmail.com",
-    "CV": "/profile/CV.pdf"
+    "CV": "/profile/CV-Boattini-ES.pdf"
   },
   "skills": {
     "lenguajes": [
@@ -29,7 +32,7 @@
       "Trello",
       "Slack",
       "Illustrator",
-      "Photoshop"      
+      "Photoshop"
     ],
     "database": [
       "SQL",
@@ -49,7 +52,7 @@
       "Github"
     ],
     "3dDesign": [
-      "3D Builder",      
+      "3D Builder",
       "MeshMixer",
       "Ultimaker Cura",
       "Prusa Slicer"
@@ -92,7 +95,7 @@
     "https://www.udemy.com/certificate/UC-294ca089-e6e2-4c1a-86e5-57a1f7e01f69/",
     "https://www.udemy.com/certificate/UC-4ca8e86d-e5e7-4696-be4b-aa738bc426fd/"
   ],
-  "textContact": [ 
+  "textContact": [
     "¿Estás buscando a alguien con habilidades y experiencia para un nuevo proyecto o puesto? Estoy disponible para nuevas oportunidades y estaría encantado de escuchar sobre tu propuesta. Si crees que mi perfil encaja con lo que necesitas, no dudes en ponerte en contacto conmigo. Por favor, completa el siguiente formulario y me pondré en contacto contigo lo antes posible."
   ]
 }
