--- a/src/translations/es/profile.json
+++ b/src/translations/es/profile.json
@@ -58,7 +58,7 @@
       "Prusa Slicer"
     ]
   },
-  "profilePicture": "/profile/fotoDePerfil.png",
+  "profilePicture": "/profile/fotoDePerfil.jpg",
   "workExperience": [
     {
       "title": "Administrativo",
